--- a/apps/shortnr-service/shortnr.WebApi/shortnr.WebApi.csproj
+++ b/apps/shortnr-service/shortnr.WebApi/shortnr.WebApi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <RuntimeIdentifiers>linux-musl-x64</RuntimeIdentifiers>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
