--- a/apps/compose.yaml
+++ b/apps/compose.yaml
@@ -3,11 +3,32 @@ services:
     build: ./shortnr-client
     ports:
       - "4200:4200"
+    develop:
+      watch:
+        - path: ./shortnr-client/src
+          target: /app/src
+          action: sync
+        - path: ./shortnr-client/package.json
+          action: rebuild
+        - path: ./shortnr-client/package-lock.json
+          action: rebuild
+        - path: ./shortnr-client/angular.json
+          action: rebuild
+        - path: ./shortnr-client/tsconfig.json
+          action: rebuild
+        - path: ./shortnr-client/tsconfig.app.json
+          action: rebuild
+        - path: ./shortnr-client/tsconfig.spec.json
+          action: rebuild
   api:
     build: ./shortnr-service/shortnr.WebApi
     ports:
       - "5120:8080"
     environment:
       - ASPNETCORE_HTTP_PORT=8080
+    develop:
+      watch:
+        - path: ./shortnr-service
+          action: rebuild
 
 
