feat: add Redis and DynamoDB containers

--- a/apps/shortnr-client/Dockerfile
+++ b/apps/shortnr-client/Dockerfile
@@ -1,10 +1,15 @@
 FROM node:20.10.0 as base
 
 WORKDIR /app
+COPY package.json .
+COPY package-lock.json .
+
+FROM base as build
+RUN npm ci
+
+FROM build as release
 COPY . .
-
-RUN npm install --verbose
-
 EXPOSE 4200
 
 CMD ["npm", "run", "start:container"]
+
