--- a/apps/shortnr-service/shortnr.WebApi/Properties/launchSettings.json
+++ b/apps/shortnr-service/shortnr.WebApi/Properties/launchSettings.json
@@ -1,11 +1,10 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
+    "local": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "todos",
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5120",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
