--- a/apps/shortnr-service/shortnr.WebApi/appsettings.Development.json
+++ b/apps/shortnr-service/shortnr.WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "redis": {
+    "connectionString": "shortnr-cache"
   }
 }
