--- a/apps/compose.yaml
+++ b/apps/compose.yaml
@@ -1,4 +1,20 @@
 services:
+  web:
+    build: ./shortnr-client
+    image: shortnr/web
+    container_name: shortnr-web
+    ports:
+      - "4200:4200"
+    develop:
+      watch:
+        - path: ./shortnr-client/package.json
+          action: rebuild
+        - path: ./shortnr-client/tsconfig*.json
+          action: rebuild
+        - path: ./shortnr-client/angular.json
+          action: rebuild
+        - path: ./shortnr-client/src/
+          action: sync
   api:
     build: ./shortnr-service
     image: shortnr/api
