--- a/apps/compose.yaml
+++ b/apps/compose.yaml
@@ -1,34 +1,49 @@
 services:
   web:
     build: ./shortnr-client
+    image: shortnr/web
+    container_name: shortnr-web
     ports:
       - "4200:4200"
     develop:
       watch:
-        - path: ./shortnr-client/src
-          target: /app/src
-          action: sync
         - path: ./shortnr-client/package.json
           action: rebuild
-        - path: ./shortnr-client/package-lock.json
+        - path: ./shortnr-client/tsconfig*.json
           action: rebuild
         - path: ./shortnr-client/angular.json
           action: rebuild
-        - path: ./shortnr-client/tsconfig.json
-          action: rebuild
-        - path: ./shortnr-client/tsconfig.app.json
-          action: rebuild
-        - path: ./shortnr-client/tsconfig.spec.json
-          action: rebuild
+        - path: ./shortnr-client/src/
+          action: sync
+
   api:
-    build: ./shortnr-service/shortnr.WebApi
+    build: ./shortnr-service
+    image: shortnr/api
+    container_name: shortnr-api
     ports:
       - "5120:8080"
     environment:
+      - DOTNET_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORT=8080
+      - AWS_ACCESS_KEY_ID=FAKEAWSKEYID
+      - AWS_SECRET_ACCESS_KEY=FAKEAWSSECRETKEY
+      - AWS_REGION=eu-west-1
     develop:
       watch:
         - path: ./shortnr-service
           action: rebuild
+  cache:
+    image: redis:7.2.3-alpine3.19
+    container_name: shortnr-cache
+    ports:
+      - "6379:6379"
 
+  database:
+    image: amazon/dynamodb-local:2.2.0
+    container_name: shortnr-database
+    ports:
+      - "8000:8000"
 
+networks:
+  default:
+    name: shortnr_default
