--- a/apps/shortnr-client/Dockerfile
+++ b/apps/shortnr-client/Dockerfile
@@ -1,10 +1,14 @@
-FROM node:20.10.0 as base
+FROM node:20.10.0-bullseye as base
 
 WORKDIR /app
+
+COPY package.json .
+COPY .npmrc .
+
+RUN npm install
+
 COPY . .
-
-RUN npm install --verbose
-
 EXPOSE 4200
 
 CMD ["npm", "run", "start:container"]
+
