--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-node@v4.0.1
         with:
           node-version: 20.10.0
-          cache: npm
+          # cache: npm
 
       - name: 'npm install'
         run: npm install
