--- a/apps/shortnr-client/package.json
+++ b/apps/shortnr-client/package.json
@@ -9,7 +9,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "lint:ci": "ng lint --format @microsoft/eslint-formatter-sarif --output-file eslint-report.sarif"
+    "lint:ci": "ng lint --format @microsoft/eslint-formatter-sarif --output-file eslint-results.sarif"
   },
   "private": true,
   "dependencies": {
