--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: 'upload analysis to GitHub'
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: eslint-results.sarif
+          sarif_file: ./apps/shortnr-client/eslint-results.sarif
           wait-for-processing: true
 
     
