--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,7 @@ jobs:
 
       - name: 'echo PWD'
         run: echo ${{ github.workspace }}
+        working-directory: ./apps/shortnr-client
 
       # - name: 'upload OSV Scanner analysis to GitHub'
       #   uses: github/codeql-action/upload-sarif@v2
