--- a/apps/shortnr-client/angular.json
+++ b/apps/shortnr-client/angular.json
@@ -93,7 +93,18 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js"
+          },
+          "configurations": {
+            "ci": {
+              "watch": false,
+              "browsers": "ChromeHeadless",
+              "reporters": [
+                "spec"
+              ],
+              "codeCoverage": true
+            }
           }
         },
         "lint": {
