--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,4 +108,4 @@ jobs:
       - name: 'upload code coverage report'
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: ${{ github.workspace }}/apps/shortnr-client/coverage/shortnr-client/cobertura-coverage.xml
+          filename: coverage/**/cobertura-coverage.xml
