--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,4 +108,5 @@ jobs:
       - name: 'upload code coverage report'
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: coverage/**/cobertura-coverage.xml
+          filename: apps/shortnr-client/coverage/**/cobertura-coverage.xml
+          format: markdown
