--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -101,12 +101,21 @@ jobs:
 
       - name: 'npm install'
         run: npm install
-      
+  
       - name: 'npm run test:ci'
         run: npm run test:ci
 
-      - name: 'upload code coverage report'
+      - name: 'generate PR code coverage report'
         uses: irongut/CodeCoverageSummary@v1.3.0
+        if: ${{ github.event_name == 'pull_request' }}
         with:
           filename: apps/shortnr-client/coverage/**/cobertura-coverage.xml
           format: markdown
+          output: file
+
+      - name: 'post code coverage report as PR comment'
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          recreate: true
+          path: code-coverage-results.md
