--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,7 +86,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-request: write
+      pull-requests: write
     defaults:
       run:
         working-directory: ./apps/shortnr-client
