ci: test custom message

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -128,3 +128,5 @@ jobs:
         with:
           recreate: true
           path: code-coverage-results.md
+          message: |
+            This is a test
