--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,8 +7,13 @@ on:
   push:
     branches:
       - 'main'
+
+    paths:
+      - apps/shortnr-client/*
   
   pull_request:
+    paths:
+      - apps/shortnr-client/*
 
 jobs:
   angular-static-analysis:
