--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -29,14 +29,17 @@ jobs:
     steps:
       - name: 'checkout code'
         uses: actions/checkout@v3
-
-      - name: 'setup node'
-        uses: actions/setup-node@v4.0.1
+  
+      - uses: .github/actions/node/install
         with:
           node-version: 20.10.0
+      # - name: 'setup node'
+      #   uses: actions/setup-node@v4.0.1
+      #   with:
+      #     node-version: 20.10.0
 
-      - name: 'npm install'
-        run: npm install
+      # - name: 'npm install'
+      #   run: npm install
 
       - name: 'run ESLint analysis'
         run: npm run lint:ci
