--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -12,8 +12,8 @@ on:
       - apps/shortnr-client/*
   
   pull_request:
-    paths:
-      - apps/shortnr-client/*
+    # paths:
+    #   - apps/shortnr-client/*
 
 jobs:
   angular-static-analysis:
@@ -30,13 +30,17 @@ jobs:
       - name: 'checkout code'
         uses: actions/checkout@v3
 
-      - name: 'setup node'
-        uses: actions/setup-node@v4.0.1
+      - uses: .github/actions/node/install
         with:
           node-version: 20.10.0
 
-      - name: 'npm install'
-        run: npm install
+      # - name: 'setup node'
+      #   uses: actions/setup-node@v4.0.1
+      #   with:
+      #     node-version: 20.10.0
+
+      # - name: 'npm install'
+      #   run: npm install
 
       - name: 'run ESLint analysis'
         run: npm run lint:ci
