--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -30,7 +30,8 @@ jobs:
       - name: 'checkout code'
         uses: actions/checkout@v3
 
-      - uses: ./.github/actions/node/install.yml
+      - name: 'install npm dependencies'
+        uses: ./.github/actions/node/install
         with:
           node-version: 20.10.0
 
