--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -36,14 +36,6 @@ jobs:
           node-version: 20.10.0
           working-directory: ./apps/shortnr-client
 
-      # - name: 'setup node'
-      #   uses: actions/setup-node@v4.0.1
-      #   with:
-      #     node-version: 20.10.0
-
-      # - name: 'npm install'
-      #   run: npm install
-
       - name: 'run ESLint analysis'
         run: npm run lint:ci
         continue-on-error: true
@@ -106,13 +98,11 @@ jobs:
       - name: 'checkout code'
         uses: actions/checkout@v3
 
-      - name: 'setup node'
-        uses: actions/setup-node@v4.0.1
+      - name: 'install npm dependencies'
+        uses: ./.github/actions/node/install
         with:
           node-version: 20.10.0
-
-      - name: 'npm install'
-        run: npm install
+          working-directory: ./apps/shortnr-client
   
       - name: 'npm run test:ci'
         run: npm run test:ci
