ci: add the path filter again

--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -12,8 +12,8 @@ on:
       - apps/shortnr-client/*
   
   pull_request:
-    # paths:
-    #   - apps/shortnr-client/*
+    paths:
+      - apps/shortnr-client/*
 
 jobs:
   angular-static-analysis:
