--- a/.github/actions/node/install/action.yml
+++ b/.github/actions/node/install/action.yml
@@ -24,6 +24,10 @@ runs:
     - name: 'glob test'
       run: echo $(pwd)
       shell: bash
+    
+    - name: 'dir test'
+      run: echo $(ls ${{ inputs.working-directory }})
+      shell: bash
 
     - name: 'cache npm dependencies'
       id: cache-npm
