--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -8,9 +8,6 @@ on:
     branches:
       - 'main'
 
-    paths:
-      - apps/shortnr-client/*
-  
   pull_request:
     paths:
       - apps/shortnr-client/*
@@ -27,14 +24,27 @@ jobs:
         working-directory: ./apps/shortnr-client
 
     steps:
-      - name: 'checkout code'
+      - name: 'Checkout code'
         uses: actions/checkout@v3
 
-      - name: 'install npm dependencies'
+      - name: 'Install npm dependencies'
         uses: ./.github/actions/node/install
         with:
           node-version: 20.10.0
           working-directory: ./apps/shortnr-client
+
+      - name: 'Run static analysis'
+        run: |
+          docker run --rm -t -v "${{ github.workspace }}/apps/shortnr-client:/src" \
+            returntocorp/semgrep semgrep ci \
+              --sarif \
+              --output /src/sast-results.sarif
+    
+      - name: 'Upload static analysis results to GitHub'
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ./apps/shortnr-client/sast-results.sarif
+          wait-for-processing: true
 
       - name: 'build'
         run: npm run build:ci
