ci: update SAST path

--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -35,9 +35,10 @@ jobs:
 
       - name: 'Run static analysis'
         run: |
-          docker run --rm -t -v "${{ github.workspace }}/apps/shortnr-client:/src" \
+          docker run --rm -t -v "${{ github.workspace }}/apps/shortnr-client/src:/src" \
             returntocorp/semgrep semgrep scan \
               --config auto \
+              --metrics off \
               --sarif \
               --output /src/sast-results.sarif
     
