ci: fix semgrep path

--- a/.github/workflows/angular-ci.yaml
+++ b/.github/workflows/angular-ci.yaml
@@ -35,8 +35,8 @@ jobs:
 
       - name: 'Run static analysis'
         run: |
-          docker run --rm -t -v "${{ github.workspace }}/apps/shortnr-client/src:/src" \
-            returntocorp/semgrep semgrep scan \
+          docker run --rm -t -v "${{ github.workspace }}/apps/shortnr-client:/src" \
+            returntocorp/semgrep semgrep scan src \
               --config "p/default" \
               --metrics off \
               --sarif \
