--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -41,3 +41,16 @@ jobs:
         with:
           sarif_file: ./apps/shortnr-service/sast-results.sarif
           wait-for-processing: true
+      
+      - name: 'Run open source vulnerability scan'
+        uses: snyk/actions/dotnet@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --sarif-file-output=./apps/shortnr-service/sca-results.sarif
+      
+      - name: 'Upload open source vulnerability results to GitHub'
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ./apps/shortnr-service/sca-results.sarif
+          wait-for-processing: true
