--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -42,14 +42,24 @@ jobs:
           sarif_file: ./apps/shortnr-service/sast-results.sarif
           wait-for-processing: true
       
-      - name: 'Run open source vulnerability scan'
-        uses: snyk/actions/dotnet@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --sarif-file-output=./apps/shortnr-service/sca-results.sarif
-      
-      - name: 'Upload open source vulnerability results to GitHub'
+      - name: 'Generate SBOM'
+        run: |
+          docker run --rm -t -v "${{ github.workspace }}/apps/shortnr-service:/src" \
+            cyclonedx/cyclonedx-dotnet /src/shortnr.WebApi/shortnr.WebApi.csproj \
+              --exclude-test-projects \
+              --exclude-dev \
+              --json \
+              --filename "/src/sbom.json"
+
+      - name: 'Run OSV Scanner analysis'
+        run: |
+          docker run --rm -t -v "${{ github.workspace }}/apps/shortnr-service:/src" \
+            ghcr.io/google/osv-scanner \
+              --sbom "/src/sbom.json" \
+              --format "sarif" \
+              --output "/src/sca-results.sarif"
+
+      - name: 'upload OSV Scanner analysis to GitHub'
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: ./apps/shortnr-service/sca-results.sarif
