refactor: change compose build configuration for the API

--- a/apps/compose.yaml
+++ b/apps/compose.yaml
@@ -1,3 +1,5 @@
+version: '3.9'
+name: 'shortnr-local'
 services:
   web:
     build: ./shortnr-client
@@ -17,7 +19,9 @@ services:
           action: sync
 
   api:
-    build: ./shortnr-service
+    build:
+      context: ./shortnr-service
+      dockerfile: Dockerfile.local
     image: shortnr/api
     container_name: shortnr-api
     ports:
@@ -32,6 +36,7 @@ services:
       watch:
         - path: ./shortnr-service
           action: rebuild
+
   cache:
     image: redis:7.2.3-alpine3.19
     container_name: shortnr-cache
