--- a/apps/shortnr-service/Directory.Packages.props
+++ b/apps/shortnr-service/Directory.Packages.props
@@ -7,5 +7,11 @@
 
     <PackageVersion Include="AWSSDK.Core" Version="3.7.300.23" />
     <PackageVersion Include="AWSSDK.DynamoDBv2" Version="3.7.300.23" />
+    
+    <!-- Test project dependencies -->
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+    <PackageVersion Include="xunit" Version="2.4.2" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
+    <PackageVersion Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
 </Project>
