--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -93,16 +93,14 @@ jobs:
       - name: 'Build'
         run: dotnet build --nologo --no-restore
 
-      - name: 'Display tests'
-        run: dotnet test --nologo --no-build --verbosity 'minimal' --list-tests
-
       - name: 'Run tests'
+        run: dotnet test --nologo --no-build --verbosity 'minimal' --list-tests
         run: dotnet test --nologo --no-build --verbosity 'minimal' --logger trx
 
       - name: 'Upload test results'
         uses: actions/upload-artifact@v3
         with:
           name: dotnet-test-results
-          path: TestResults
+          path: shortnr.Tests/TestResults
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
