--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -100,9 +100,9 @@ jobs:
         run: dotnet test --nologo --no-build --verbosity 'minimal' --logger trx
 
       - name: 'Upload test results'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dotnet-test-results
-          path: shortnr.Tests/TestResults
+          path: apps/shortnr-service/shortnr.Tests/TestResults
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
