--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -97,7 +97,7 @@ jobs:
         run: dotnet test --nologo --no-build --verbosity 'minimal' --list-tests
 
       - name: 'Run tests'
-        run: dotnet test --nologo --no-build --verbosity 'minimal' --logger trx
+        run: dotnet test --nologo --no-build --verbosity 'minimal' --logger trx --logger html
 
       - name: 'Upload test results'
         uses: actions/upload-artifact@v4
