--- a/apps/shortnr-service/shortnr.WebApi/shortnr.WebApi.csproj
+++ b/apps/shortnr-service/shortnr.WebApi/shortnr.WebApi.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <PublishAot>true</PublishAot>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +15,10 @@
 
     <PackageReference Include="AWSSDK.Core" />
     <PackageReference Include="AWSSDK.DynamoDBv2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\shortnr.Application\shortnr.Application.csproj" />
   </ItemGroup>
 
 </Project>
