--- a/apps/shortnr-service/shortnr.Tests/shortnr.Tests.csproj
+++ b/apps/shortnr-service/shortnr.Tests/shortnr.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\shortnr.Application\shortnr.Application.csproj" />
+  </ItemGroup>
+
 </Project>
