--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -10,7 +10,7 @@ on:
 
   pull_request:
     paths:
-      - apps/shortnr-service/*
+      - apps/shortnr-service/**
 
 jobs:
   dotnet-security-scan:
