--- a/apps/compose.yaml
+++ b/apps/compose.yaml
@@ -18,24 +18,24 @@ services:
         - path: ./shortnr-client/src/
           action: sync
 
-  api:
-    build:
-      context: ./shortnr-service
-      dockerfile: Dockerfile.local
-    image: shortnr/api
-    container_name: shortnr-api
-    ports:
-      - "5120:8080"
-    environment:
-      - DOTNET_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORT=8080
-      - AWS_ACCESS_KEY_ID=FAKEAWSKEYID
-      - AWS_SECRET_ACCESS_KEY=FAKEAWSSECRETKEY
-      - AWS_REGION=eu-west-1
-    develop:
-      watch:
-        - path: ./shortnr-service
-          action: rebuild
+  # api:
+  #   build:
+  #     context: ./shortnr-service
+  #     dockerfile: Dockerfile.local
+  #   image: shortnr/api
+  #   container_name: shortnr-api
+  #   ports:
+  #     - "5120:8080"
+  #   environment:
+  #     - DOTNET_ENVIRONMENT=Development
+  #     - ASPNETCORE_HTTP_PORT=8080
+  #     - AWS_ACCESS_KEY_ID=FAKEAWSKEYID
+  #     - AWS_SECRET_ACCESS_KEY=FAKEAWSSECRETKEY
+  #     - AWS_REGION=eu-west-1
+  #   develop:
+  #     watch:
+  #       - path: ./shortnr-service
+  #         action: rebuild
 
   cache:
     image: redis:7.2.3-alpine3.19
@@ -50,6 +50,7 @@ services:
     image: amazon/dynamodb-local:2.2.0
     container_name: shortnr-database
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
+    user: root
     ports:
       - "8000:8000"
     volumes:
@@ -61,5 +62,5 @@ networks:
     name: shortnr_default
 
 volumes:
-  shortnr-database-data: {}
-  shortnr-cache-data: {}
+  shortnr-database-data:
+  shortnr-cache-data:
