--- a/apps/shortnr-service/shortnr.Application/shortnr.Application.csproj
+++ b/apps/shortnr-service/shortnr.Application/shortnr.Application.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <IsAotCompatible>true</IsAotCompatible>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
   </PropertyGroup>
 
   <ItemGroup>
