--- a/apps/shortnr-service/shortnr.WebApi/appsettings.Development.json
+++ b/apps/shortnr-service/shortnr.WebApi/appsettings.Development.json
@@ -10,7 +10,7 @@
   },
   "aws": {
     "dynamoDb": {
-      "serviceUrl": "http://localhost:8000"
+      "serviceUrl": "http://shortnr-database:8000"
     }
   }
 }
