--- a/apps/compose.yaml
+++ b/apps/compose.yaml
@@ -1,4 +1,3 @@
-version: '3.9'
 name: 'shortnr-local'
 services:
   web:
@@ -7,35 +6,25 @@ services:
     container_name: shortnr-web
     ports:
       - "4200:4200"
-    develop:
-      watch:
-        - path: ./shortnr-client/package.json
-          action: rebuild
-        - path: ./shortnr-client/tsconfig*.json
-          action: rebuild
-        - path: ./shortnr-client/angular.json
-          action: rebuild
-        - path: ./shortnr-client/src/
-          action: sync
+    profiles: ["frontend"]
 
-  # api:
-  #   build:
-  #     context: ./shortnr-service
-  #     dockerfile: Dockerfile.local
-  #   image: shortnr/api
-  #   container_name: shortnr-api
-  #   ports:
-  #     - "5120:8080"
-  #   environment:
-  #     - DOTNET_ENVIRONMENT=Development
-  #     - ASPNETCORE_HTTP_PORT=8080
-  #     - AWS_ACCESS_KEY_ID=FAKEAWSKEYID
-  #     - AWS_SECRET_ACCESS_KEY=FAKEAWSSECRETKEY
-  #     - AWS_REGION=eu-west-1
-  #   develop:
-  #     watch:
-  #       - path: ./shortnr-service
-  #         action: rebuild
+  api:
+    build:
+      context: ./shortnr-service
+      dockerfile: Dockerfile.local
+    image: shortnr/api
+    container_name: shortnr-api
+    depends_on:
+      - cache
+      - database
+    ports:
+      - "5120:8080"
+    environment:
+      - DOTNET_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORT=8080
+      - AWS_ACCESS_KEY_ID=FAKEAWSKEYID
+      - AWS_SECRET_ACCESS_KEY=FAKEAWSSECRETKEY
+      - AWS_REGION=eu-west-1
 
   cache:
     image: redis:7.2.3-alpine3.19
@@ -64,3 +53,4 @@ networks:
 volumes:
   shortnr-database-data:
   shortnr-cache-data:
+
