ci: set absolute path

--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -50,7 +50,7 @@ jobs:
               --exclude-dev \
               --json \
               --out "/src" \
-              --filename "sbom.json"
+              --filename "/src/sbom.json"
 
       - name: 'Run OSV Scanner analysis'
         run: |
