test: update unit tests

--- a/apps/shortnr-service/shortnr.Application/shortnr.Application.csproj
+++ b/apps/shortnr-service/shortnr.Application/shortnr.Application.csproj
@@ -14,6 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>shortnr.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="StackExchange.Redis" />
 
     <PackageReference Include="AWSSDK.Core" />
