--- a/apps/shortnr-service/Directory.Packages.props
+++ b/apps/shortnr-service/Directory.Packages.props
@@ -13,5 +13,7 @@
     <PackageVersion Include="xunit" Version="2.4.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
     <PackageVersion Include="coverlet.collector" Version="3.2.0" />
+    <PackageVersion Include="NSubstitute" Version="5.1.0" />
+    <PackageVersion Include="NSubstitute.Analyzers.CSharp" Version="1.0.16" />
   </ItemGroup>
 </Project>
