--- a/apps/shortnr-service/shortnr.WebApi/appsettings.Development.json
+++ b/apps/shortnr-service/shortnr.WebApi/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "redis": {
     "connectionString": "shortnr-cache"
+  },
+  "aws": {
+    "dynamoDb": {
+      "serviceUrl": "http://shortnr-database:8000"
+    }
   }
 }
